--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -7,9 +7,5 @@ jobs:
     name: Run brew install
     runs-on: ubuntu-latest
     steps:
-      - name: Update taps
-        run: brew update
-      - name: Tap tani/linux
-        run: brew tap tani/linux
       - name: Install emacs-gtk
-        run: brew install -f emacs-gtk
+        run: docker run --rm -it -v ${PWD}:/work -u linuxbrew linuxbrew/brew:latest brew install -f /work/Formula/emacs-gtk
