--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -7,5 +7,7 @@ jobs:
     name: Run brew install
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Install emacs-gtk
         run: docker run --rm -it -v ${PWD}:/work -u linuxbrew linuxbrew/brew:latest brew install -f /work/Formula/emacs-gtk
