--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install emacs-gtk
-        run: docker run --rm -v ${GITHUB_WORKSPACE}:/work -u linuxbrew linuxbrew/brew:latest brew install -v -f /work/Formula/${{package}}.rb
+        run: docker run --rm -v ${GITHUB_WORKSPACE}:/work -u linuxbrew linuxbrew/brew:latest brew install -v -f /work/Formula/${{ matrix.package }}.rb
