build: add --HEAD option to neovim build in brew.yml
- Add `--HEAD` option to `neovim` build in `brew.yml`

Signed-off-by: TANIGUHCI Masaya <ta2gch@gmail.com>

--- a/.github/workflows/brew.yml
+++ b/.github/workflows/brew.yml
@@ -15,7 +15,7 @@ jobs:
           - name: isabelle
             options: '--HEAD'
           - name: neovim
-            options: ''
+            options: '--HEAD'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
